Update .travis.yml to install libicu-dev
Add:
 * Instructions to install libicu-dev before testing with Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: ruby
+
 rvm:
   - 1.9.2
   - 1.9.3
+
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install libicu-dev
 
 notifications:
   email: false
