--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ rvm:
   - 1.9.2
   - 1.9.3
 
+bundler_args: --without development darwin
+
 before_install:
   - sudo apt-get update
   - sudo apt-get install libicu-dev
