--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ rvm:
 bundler_args: --without test darwin
 
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install libicu-dev
+  - sudo apt-get update --quiet
+  - sudo apt-get install libicu-dev --quiet
 
 notifications:
   email: false
