need a higher logging level for apt-get

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ rvm:
 bundler_args: --without test darwin
 
 before_install:
-  - sudo apt-get --quiet update
-  - sudo apt-get --quiet install libicu-dev
+  - sudo apt-get -qq update
+  - sudo apt-get -qq install libicu-dev
 
 notifications:
   email: false
