Fix Rugged and other updates
This fixes major issues as runtime gems weren't locked down, so Rugged
actually updated and caused breaking changes.

 - Update gemspec to lock in minor version of runtime gems
 - Use pessimistic version for gemfile
 - Fix up rubocop issues, update rubocop rules
 - Convert specs to use RSpec 3 newer `expect` and `allow` methods
 - Group it blocks in RSpec for quicker tests
 - Remove Gitter badge on README
 - Specify the use of ruby 2.2.0 in travis ci
 - Remove .ruby-version file
 - Fix use of Rugged's updated version; how we acquire the repository
   and branch as the original methods changed
 - Minor style changes (newlines, quotes)

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,9 @@ AllCops:
     - '**/Rakefile'
     - '**/*.rake'
 
+AbcSize:
+  Enabled: false
+
 ClassLength:
   Enabled: false
 
@@ -17,6 +20,9 @@ EmptyLineBetweenDefs:
 
 Encoding:
   EnforcedStyle: when_needed
+
+FileName:
+  Enabled: false
 
 LineLength:
   Enabled: false
